<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:background="@color/sidebar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/icon_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/loon_icon" />

        <TextView
            android:id="@+id/contacts"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/contacts_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about" />

        <TextView
            android:id="@+id/about"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/about_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_menu" />

        <TextView
            android:id="@+id/main_menu"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginTop="39dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/main_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/flower_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/flower_title"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shop_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/shop_title"
        android:textColor="@color/shop_title"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/flower_title"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/allButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/allButton"
        app:layout_constraintTop_toTopOf="@+id/allButton"
        tools:listitem="@layout/category_element" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bouquetsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/categoriesRecyclerView"
        app:layout_constraintBottom_toTopOf="@id/orderButton"
        tools:listitem="@layout/bouquet_element" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/shop_title"
        android:onClick="OpenOrderActivity"
        android:paddingLeft="2dp"
        android:paddingTop="0dp"
        android:paddingRight="2dp"
        android:paddingBottom="0dp"
        android:text="Корзина"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/constraintLayout" />
    <Button
        android:id="@+id/allButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/shop_title"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:paddingTop="0dp"
        android:paddingRight="2dp"
        android:paddingBottom="0dp"
        android:text="Все"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:onClick="OnAllButtonClick"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/flower_title"
        app:srcCompat="@drawable/filter" />



</androidx.constraintlayout.widget.ConstraintLayout>